- Unit tests:
  - Updated the unit test driver for testing the red-black tree implementation.
    This code is normally not compiled (as it does not contribute to the
    installed components), but if enabled in recent versions, it was failing to
    compile because of the changes to the AspCount function signature
    introduced in version 1.1.0.0.

Version 1.1.1.0 (compiler 1.1.0.0, engine 1.1.1.0):
- Engine:
  - Separated the script math function definitions into their own library for
    the benefit of applications that don't need them, and therefore don't need
    their dependencies (i.e., various C math routines).
- Build:
  - Added a CPack-based packaging script for building several source and
    binary packages, including an installer for Windows systems.

Version 1.1.0.0 (compiler 1.1.0.0, engine 1.1.0.0):
- Compiler:
  - Added string literal folding for explicit concatenation (+ operator) and
    juxtaposition.
  - Improved error reporting.
- Engine:
  - Changed the default value of the range start component (i.e., the value
    assumed when a range's start value is left unspecified, e.g., ..5).
    Previously it was always zero. Now, it is -1 if the step is negative, and
    zero otherwise.
  - Added allowing of Boolean values as range components, converting them to
    integers in the usual way.
  - Added missing range operations, all of which can be computed
    mathematically:
    - Length, i.e., the number of elements in a range.
    - Element indexing.
    - Membership test.
    - Slicing, which produces a new range object.
  - Added handling of unbounded ranges/slices.
  - Added reversed iterators.
  - Made the following API function changes:
    - AspRangeValues: Added an extra parameter to indicate whether the range is
      bounded.
    - AspCount: Changed to return AspRunResult since it can now fail in certain
      situations (e.g., unbounded ranges).
    - AspNewIterator: Added an extra parameter to indicate the type of iterator