@@ -6,7 +6,9 @@ cmake_minimum_required(VERSION 3.5)
 
 set(PARENT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR})
 
-project(aspg VERSION 1.1.0.0)
+file(STRINGS version.txt VERSION)
+
+project(aspg VERSION ${VERSION})
 
 set(ABI_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR})
 if(NOT ${ABI_VERSION} VERSION_EQUAL ${PARENT_VERSION})
