@@ -6,8 +6,10 @@ cmake_minimum_required(VERSION 3.5)
 
 set(PARENT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR})
 
+file(STRINGS version.txt VERSION)
+
 project(aspe
-    VERSION 1.1.1.0
+    VERSION ${VERSION}
     LANGUAGES C
     )
 
